--- a/xbrl/WebContent/index.html
+++ b/xbrl/WebContent/index.html
@@ -21,11 +21,10 @@
 $(function() {
 	$(document).ready(function(){
 	  $('#middlebar .slickpanel').slick({
-	  	dots: true
+	  	dots: true,
+	  	autoplay: true
 	  });
 	});
-	console.info(window.screen);
-	console.info($(window).width(), $(window).height());
 });	
 	</script>
 </head>
