--- a/xbrl/WebContent/whatis.html
+++ b/xbrl/WebContent/whatis.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>XBRL.SM</title>
+<title>XBRL.SM - Cos'è l'XBRL?</title>
 
 	<link type="image/png" href="images/xbrl_circle32.png" rel="shortcut icon" />
 	<link type="image/png" href="images/xbrl_circle32.png" rel="icon" />
 	<link type="text/css" href="css/main.css" rel="stylesheet">
 
 	<script type="text/javascript" src="js/jquery-3.3.1.min.js" ></script>	
-  <script type="text/javascript" src="js/jss.js" ></script>	
+    <script type="text/javascript" src="js/jss.js" ></script>	
 	
 	
 	<script type="text/javascript">
@@ -26,7 +26,7 @@ $(function() {
   <div class="subtitle">
      Il sito ufficiale della Repubblica di San Marino per l'XBRL
   </div>
-  <img src="images/xbrl_sm.png" class="xbrllogo"  />
+  <a href="index.html" class="xbrllogo"><img src="images/xbrl_sm.png"   /></a>
 </div>
 
 <div style="position: absolute; top: 320px; left: 120px; font-size: 150px; color: rgba(100, 100, 100, 0.3); -moz-transform:rotate(20deg); -webkit-transform:rotate(20deg); z-index: 0;">
