--- a/xbrl/WebContent/taxo.html
+++ b/xbrl/WebContent/taxo.html
@@ -29,7 +29,7 @@ $(function() {
   <a href="index.html" class="xbrllogo"><img src="images/xbrl_sm.png"   /></a>
 </div>
 
-<div style="position: absolute; top: 320px; left: 120px; font-size: 150px; color: rgba(100, 100, 100, 0.3); -moz-transform:rotate(20deg); -webkit-transform:rotate(20deg); z-index: 0;">
+<div class="undercost" >
    	   SITO IN COSTRUZIONE
 </div>
 
@@ -38,6 +38,12 @@ $(function() {
    Le tassonomie XBRL
    </div>
    <div class="body">
+   <table style="width: 80%; margin: 4px auto; font-size: 14px;">
+     <tr>
+       <td><a href="taxo/index.html">Elenco tassonomie</a></td>
+       <td class="right"><a href="taxo/2019-01-24/index.html">Ultima tassonomia</a></td>
+     </tr>
+   </table>
    <p>
    L’XBRL definisce una sintassi comune, adottata a livello di standard internazionale, per specificare le voci di bilancio e 
    associarle correttamente ai vari contesti. 
