--- a/xbrl/WebContent/taxo/2019-01-24/index.html
+++ b/xbrl/WebContent/taxo/2019-01-24/index.html
@@ -4,24 +4,24 @@
 <meta charset="UTF-8">
 <title>XBRL.SM</title>
 
-	<link type="image/png" href="/images/xbrl_circle32.png" rel="shortcut icon" />
-	<link type="image/png" href="/images/xbrl_circle32.png" rel="icon" />
-	<link type="text/css" href="/css/main.css" rel="stylesheet">
+	<link type="image/png" href="../../images/xbrl_circle32.png" rel="shortcut icon" />
+	<link type="image/png" href="../../images/xbrl_circle32.png" rel="icon" />
+	<link type="text/css" href="../../css/main.css" rel="stylesheet">
 
-	<script type="text/javascript" src="js/jquery-3.3.1.min.js" ></script>	
-    <script type="text/javascript" src="js/jss.js" ></script>	
+	<script type="text/javascript" src="../../js/jquery-3.3.1.min.js" ></script>	
+    <script type="text/javascript" src="../../js/jss.js" ></script>	
 	
 </head>
 <body>
 <div id="topbar">
-  <img src="images/stemmaRSM_med.png" class="stemmarsm" />
+  <img src="../../images/stemmaRSM_med.png" class="stemmarsm" />
   <div class="title">
      XBRL - Repubblica di San Marino
   </div>
   <div class="subtitle">
      Il sito ufficiale della Repubblica di San Marino per l'XBRL
   </div>
-  <a href="index.html" class="xbrllogo"><img src="/images/xbrl_sm.png"   /></a>
+  <a href="/index.html" class="xbrllogo"><img src="../../images/xbrl_sm.png"   /></a>
 </div>
 
 <div class="argument">
@@ -33,7 +33,10 @@
    La prima tassonomia XBRL ufficiale della Repubblica di San Marino è stata rilasciata.
    </p>
    <p>
-   Si può <a href="TassonomiaRSM-2019-01-24.zip" target="_blank">scaricare qui</a> il file .zip che contiene tutti i files che compongono la tassonomia sammarinese. 
+   Si può <a href="TassonomiaRSM-2019-01-24.zip" target="_blank">scaricare qui</a> il file .zip che contiene tutti i files che compongono la tassonomia sammarinese.
+   <br/>
+   Nel file .zip sono presenti, oltre a tutti i file XBRL che costituiscono la tassonomia, un manuale tecnico con 
+   le regole di composizione del file xbrl del bilancio.
    </p>
    </div>
    
