--- a/xbrl/WebContent/whatis.html
+++ b/xbrl/WebContent/whatis.html
@@ -29,9 +29,9 @@ $(function() {
   <a href="index.html" class="xbrllogo"><img src="images/xbrl_sm.png"   /></a>
 </div>
 
-<div style="position: absolute; top: 320px; left: 120px; font-size: 150px; color: rgba(100, 100, 100, 0.3); -moz-transform:rotate(20deg); -webkit-transform:rotate(20deg); z-index: 0;">
+  <div class="undercost" >
    	   SITO IN COSTRUZIONE
-</div>
+  </div>
 
 <div class="argument">
    <div class="title">
