step 6 - online OK

--- a/xbrl/WebContent/news.html
+++ b/xbrl/WebContent/news.html
@@ -29,28 +29,50 @@ $(function() {
   <a href="index.html" class="xbrllogo"><img src="images/xbrl_sm.png"   /></a>
 </div>
 
-  <div class="undercost" >
-   	   SITO IN COSTRUZIONE
-  </div>
-<div class="pagetitle">
-   Notizie e novità 
-</div>
-<div class="argument">
-   <div class="title">
-   Partita la sperimentazione della funzione di creazione XBRL
-   </div>
-   <div class="body">
-       <div class="data">23/01/2019</div>
-  		      Da oggi un gruppo ristretto di professionisti proverà la funzione di creazione del bilancio XBRL.
-		      <br/>
-		      Tale funzione, presente nell'applicazione <b>OPEC</b> del portale <a href="www.pa.sm" targte="_blank">www.pa.sm</a>, permette di inserire tutte le voci del bilancio 
-		      secondo la tassonomia elaborata dal dipartimento economia in stretta collaborazione con l'ordine dei commercialisti.
-		      <br/>
-		      Entro la fine del mese di gennaio sarà possibile per tutti inserire il bilancio con questa funzione.
-   </div>
-   
-   <a href="index.html" class="linkhome">Torna alla pagina principale</a>
-</div>
+<!--   <div class="undercost" > -->
+<!--    	   SITO IN COSTRUZIONE -->
+<!--   </div> -->
+	<div class="pagetitle">
+	   Notizie e novità 
+	</div>
+
+	<div class="argument">
+	   <div class="title">	   
+		   <a name="formazione-15-02">Giornata di formazione su XBRL</a>
+	   </div>
+	   <div class="body">	       
+	       <div class="data">28/01/2019</div>
+		      <img src="images/montelupo.jpg" style="height: 200px; margin: 8px; float: left;"/>   Il <b>15 febbraio 2019 <u>dalle ore 9:00 alle ore 13:00</u></b> si terrà a Domagnano nella sala Montelupo, la seconda giornata di formazione
+          dell'ordine dei commercialisti e dei revisori contabili sul bilancio nel formato XBRL.
+           <img src="images/odcec.png" style="height: 150px; margin: 8px; float: right;"/>
+		      <p>
+		      In continuità rispetto alla giornata del 21 dicembre scorso, in cui si è introdotto il formato XBRL assieme ad un'anteprima dell'interfaccia informatica in fase di sviluppo,
+		      in questa seconda giornata si andrà ad illustrare la tassonomia definitiva, il decreto 138/2018 nella versione ratificata dal Consiglio Grande e Generale il 25 gennaio 2019 
+		      e una dimostrazione degli strumenti software già funzionanti.		     
+		      </p>
+	   </div>
+	   <br/><br/>
+	   <a href="index.html" class="linkhome">Torna alla pagina principale</a>
+	</div>
+	
+	<div class="argument">
+	   <div class="title">
+	   <a name="sperimentazione">Partita la sperimentazione della funzione di creazione XBRL</a>
+	   </div>
+	   <div class="body">
+	       <div class="data">23/01/2019</div>
+	  		      Da oggi un gruppo ristretto di professionisti dell'ordine dei Commercialisti e Revisori Contabili e di alcune software house, avrà accesso 
+	  		      ad un'area di test per provare la funzione di creazione del bilancio XBRL.
+			      <br/>
+			      Tale funzione, presente nell'applicazione <b>OPEC</b> del portale <a href="www.pa.sm" targte="_blank">www.pa.sm</a>, permette di inserire tutte le voci del bilancio 
+			      secondo la tassonomia elaborata dal dipartimento economia in stretta collaborazione con l'ordine stesso.
+			      <br/>
+			      Entro la fine del mese di gennaio la funzione di creazione del bilancio sarà "aperta", rendendo possibile per tutti l'inserimento del bilancio e la produzione
+			      dello stesso in formato XBRL.
+	   </div>
+	   
+	   <a href="index.html" class="linkhome">Torna alla pagina principale</a>
+	</div>
 
  
 </body>
