--- a/xbrl/WebContent/taxo.html
+++ b/xbrl/WebContent/taxo.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>XBRL.SM - Tassonomie</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  
+  <meta name="description" content="Sito ufficiale della Repubblica di San marino su XBRL">
+  <meta name="keywords" content="xbrl, San Marino, tassonomia">
+
+	<title>XBRL.SM - Tassonomie</title>
 
 	<link type="image/png" href="images/xbrl_circle32.png" rel="shortcut icon" />
 	<link type="image/png" href="images/xbrl_circle32.png" rel="icon" />
@@ -29,9 +33,9 @@ $(function() {
   <a href="index.html" class="xbrllogo"><img src="images/xbrl_sm.png"   /></a>
 </div>
 
-<div class="undercost" >
-   	   SITO IN COSTRUZIONE
-</div>
+<!-- <div class="undercost" > -->
+<!--    	   SITO IN COSTRUZIONE -->
+<!-- </div> -->
 
 <div class="argument">
    <div class="title">
