--- a/xbrl/WebContent/taxo/2019-01-24/index.html
+++ b/xbrl/WebContent/taxo/2019-01-24/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>XBRL.SM</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  
+  <meta name="description" content="Sito ufficiale della Repubblica di San marino su XBRL">
+  <meta name="keywords" content="xbrl, San Marino, tassonomia">
+	<title>XBRL.SM</title>
 
 	<link type="image/png" href="../../images/xbrl_circle32.png" rel="shortcut icon" />
 	<link type="image/png" href="../../images/xbrl_circle32.png" rel="icon" />
@@ -30,7 +33,7 @@
    </div>
    <div class="body">
    <p>
-   La prima tassonomia XBRL ufficiale della Repubblica di San Marino è stata rilasciata.
+   La <b>prima tassonomia XBRL ufficiale</b> della Repubblica di San Marino è stata rilasciata.
    </p>
    <p>
    Si può <a href="TassonomiaRSM-2019-01-24.zip" target="_blank">scaricare qui</a> il file .zip che contiene tutti i files che compongono la tassonomia sammarinese.
