--- a/xbrl/WebContent/taxo/index.html
+++ b/xbrl/WebContent/taxo/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>XBRL.SM - Tassonomie sammarinesi</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  
+  <meta name="description" content="Sito ufficiale della Repubblica di San marino su XBRL">
+  <meta name="keywords" content="xbrl, San Marino, tassonomia">
+	<title>XBRL.SM - Tassonomie sammarinesi</title>
 
 	<link type="image/png" href="../images/xbrl_circle32.png" rel="shortcut icon" />
 	<link type="image/png" href="../images/xbrl_circle32.png" rel="icon" />
