--- a/xbrl/WebContent/whatis.html
+++ b/xbrl/WebContent/whatis.html
@@ -29,9 +29,9 @@ $(function() {
   <a href="index.html" class="xbrllogo"><img src="images/xbrl_sm.png"   /></a>
 </div>
 
-  <div class="undercost" >
-   	   SITO IN COSTRUZIONE
-  </div>
+<!--   <div class="undercost" > -->
+<!--    	   SITO IN COSTRUZIONE -->
+<!--   </div> -->
 
 <div class="argument">
    <div class="title">
