aggiunto decreto delegato 19/2019

--- a/xbrl/WebContent/index.html
+++ b/xbrl/WebContent/index.html
@@ -85,7 +85,7 @@ $(function() {
 		    </div>		  
 		  </div>
 		  
-		   <div class="new">
+		  <div class="new">
 		    <div class="data">28/01/2019</div>
 		    <div class="title">Giornata di formazione su XBRL</div>
 		    <div class="body">
@@ -96,6 +96,21 @@ $(function() {
 		      <div class="continue">		      
 		      	<a href="news.html#formazione-15-02">maggiori dettagli...</a>
 		      </div>		      
+		    </div>		  
+		  </div>
+		  <div class="new">
+		    <div class="data">29/01/2019</div>
+		    <div class="title">Ratifica decreto delegato 138/2018</div>
+		    <div class="body">
+		      <img src="images/cgglogo.png" style="height: 200px; margin: 4px; float: right;"/>
+		      In data odierna, è uscita sul bollettino ufficiale la ratifica del decreto 138/2018 
+		      "SEMPLIFICAZIONE PER LA PRESENTAZIONE DEL BILANCIO DEGLI OPERATORI ECONOMICI".
+		      <br/>
+		      Il testo emendato del decreto delegato 138 risulta quindi essere il decreto delegato <b>28 gennaio 2019 n.19</b>.
+		      <p>
+		      Il decreto, comprensivo anche dell'allegato, è scaricabile da 
+		      <a href="https://www.consigliograndeegenerale.sm/on-line/home/archivio-leggi-decreti-e-regolamenti/documento17106503.html" target="_blank">qui</a>.
+	        </p>
 		    </div>		  
 		  </div>
   </div>
