ancora su DD 19/2019

--- a/xbrl/WebContent/leggi.html
+++ b/xbrl/WebContent/leggi.html
@@ -45,7 +45,11 @@ $(function() {
    viene introdotto ufficialmente per la prima volta a San Marino l'obbligo 
    di redigere il bilancio delle società con il formato elettronico XBRL.
    <br/>
+   Il decreto viene ratificato il 28 gennaio 2019. pertanto la norma vigente in tema di deposito del bilancio è il il decreto delegato 
+   <a href="https://www.consigliograndeegenerale.sm/on-line/home/archivio-leggi-decreti-e-regolamenti/documento17106503.html" target="_blank"><b>28 gennaio 2019 n.19</b></a>.
+   <p>
    In  sintesi le modifiche in merito al deposito del bilancio, rispetto alla precedente norma stabilita dalla legge sulle società (vedi legge n.47 del 2006), sono le seguenti:
+   </p>
    <ol>
      <li>Il bilancio con la nota integrativa e l'eventuale relazione predisposta dal revisore o dalla società di revisione, 
          devono rimanere depositati almeno venti giorni prima dell’assemblea convocata per l’approvazione <b>presso la sede della società</b>
