--- a/xbrl/WebContent/index.html
+++ b/xbrl/WebContent/index.html
@@ -144,8 +144,10 @@ $(function() {
    Legislazione.
    </div>
    <div class="desc">
-   Con il decreto delegato 31 ottobre 2018 n. 138, viene introdotto ufficialmente per la prima volta a San Marino l'obbligo 
-   di redigere il bilancio delle società con il formato elettronico XBRL...
+   Il 29 gennaio 2019 è uscita sul bollettino ufficiale la ratifica del decreto 138/2018 
+	 "SEMPLIFICAZIONE PER LA PRESENTAZIONE DEL BILANCIO DEGLI OPERATORI ECONOMICI".
+    <br/>
+    Il testo emendato del decreto delegato 138 risulta...
    </div>
    <div class="more">
       <a href="leggi.html">Continua...</a>
