aggiunta regola tecnica

--- a/xbrl/WebContent/taxo/2019-01-24/index.html
+++ b/xbrl/WebContent/taxo/2019-01-24/index.html
@@ -38,8 +38,8 @@
    <p>
    Si può <a href="TassonomiaRSM-2019-01-24.zip" target="_blank">scaricare qui</a> il file .zip che contiene tutti i files che compongono la tassonomia sammarinese.
    <br/>
-   Nel file .zip sono presenti, oltre a tutti i file XBRL che costituiscono la tassonomia, un manuale tecnico con 
-   le regole di composizione del file xbrl del bilancio.
+   Nel file .zip sono presenti, oltre a tutti i file XBRL che costituiscono la tassonomia, un documento con la regola tecnica di composizione del file xbrl del bilancio.
+   Per comodità è scaricabile anche da <a href="RegolaTecnicaXBRL RSM.pdf" target="_blank">qui</a>.
    </p>
    </div>
    
