--- a/xbrl/WebContent/taxo.html
+++ b/xbrl/WebContent/taxo.html
@@ -45,7 +45,7 @@ $(function() {
    <table style="width: 80%; margin: 4px auto; font-size: 14px;">
      <tr>
        <td><a href="taxo/index.html">Elenco tassonomie</a></td>
-       <td class="right"><a href="taxo/2019-01-24/index.html">Ultima tassonomia</a></td>
+       <td class="right"><a href="taxo/latest.html">Ultima tassonomia</a></td>
      </tr>
    </table>
    <p>
