aggiornata regola tecnica

--- a/xbrl/WebContent/taxo/index.html
+++ b/xbrl/WebContent/taxo/index.html
@@ -29,6 +29,20 @@
 
 <div class="argument">
    <div class="title">
+   Aggiornata regola tecnica della tassonomia 2019-01-24
+   </div>
+   <div class="body">
+   <p>
+   Vai alla pagina della <a href="2019-01-24v2/index.html">Aggiornamento regola Tecnica 2019-01-24</a>
+   </p>
+   
+   </div>
+   
+   <a href="/index.html" class="linkhome">Torna alla pagina principale</a>
+</div>
+
+<div class="argument">
+   <div class="title">
    Rilasciata tassonomia versione 2019-01-24
    </div>
    <div class="body">
