--- a/xbrl/WebContent/taxo/latest.html
+++ b/xbrl/WebContent/taxo/latest.html
@@ -11,7 +11,7 @@
 
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="cache-control" content="no-cache" />
-    <meta http-equiv="Refresh" content="1; URL=2019-01-24/index.html" />    
+    <meta http-equiv="Refresh" content="1; URL=2019-01-24v2/index.html" />    
 </head>
   <body>
   
