corretto link errato

--- a/xbrl/WebContent/index.html
+++ b/xbrl/WebContent/index.html
@@ -116,7 +116,7 @@ $(function() {
 		    <div class="body">
 		      Da oggi un gruppo ristretto di professionisti proverà la funzione di creazione del bilancio XBRL.
 		      <br/>
-		      Tale funzione, presente nell'applicazione <b>OPEC</b> del portale <a href="www.pa.sm" targte="_blank">www.pa.sm</a>, permette di inserire tutte le voci del bilancio 
+		      Tale funzione, presente nell'applicazione <b>OPEC</b> del portale <a href="http://www.pa.sm" target="_blank">www.pa.sm</a>, permette di inserire tutte le voci del bilancio 
 		      secondo la tassonomia elaborata dal dipartimento economia in stretta collaborazione con l'ordine dei commercialisti.
 		      <br/>
 		      Entro la fine del mese di gennaio sarà possibile per tutti inserire il bilancio con questa funzione.
